add clustering UNS cells

--- a/Exploring_Cell-Types_in_UNS_data.ipynb
+++ b/Exploring_Cell-Types_in_UNS_data.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "**Load preprocessed scRNA-seq data** \n",
     "<br>\n",
-    "*See notebook \"Data preprocessing\" for this analysis part\"*"
+    "*See notebook \"Data preprocessing\" for this analysis part*"
    ]
   },
   {
@@ -311,6 +311,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5bd7769d",
+   "metadata": {},
+   "source": [
+    "Most clusters can be clearly assigned to one particluar cell type. Only cluster 5 seems to conist of a mixture of memory and naive cells. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "351f0365",
    "metadata": {},
    "source": [
@@ -350,6 +358,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a61b7521",
+   "metadata": {},
+   "source": [
+    "Mostly ribosomal proteins. No indication of cell types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a6d51bd6",
    "metadata": {},
    "source": [
@@ -376,6 +392,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dfc7ef3",
+   "metadata": {},
+   "source": [
+    "- Cluster 0 and 2 seem to represent the naive cells \n",
+    "    - similar gene expression \n",
+    "    - about 80 % naive cells\n",
+    "- Cluster 7 mostly memory according annotation `cell.type` but similar expression as 0 and 2 -> assign to Tn    \n",
+    "- other clusters have to be assigned to nTreg, TCM, TEM and TEMRA as was done in the paper "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ef3d0de",
    "metadata": {},
    "source": [
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf32f02",
+   "id": "aba9559a",
    "metadata": {},
    "source": [
     "The marker genes from literature are based on the following website: <https://www.biocompare.com/Editorial-Articles/569888-A-Guide-to-T-Cell-Markers/>"
@@ -395,12 +423,12 @@
    "id": "27752259",
    "metadata": {},
    "source": [
-    "|       T cell type /   differentiation state       | Marker genes  mentioned in Cano-Gamez et al. |   |\n",
-    "|:-------------------------------------------------:|:--------------------------------------------:|---|\n",
-    "| central memory T cells  (Tcm)                     | PASK                                         |   |\n",
-    "| effector memory T cells  (Tem)                    | IL7R, KLRB1, TNFSF13B                        |   |\n",
-    "| terminally differentiated effector cells  (TEMRA) | CCL4, GZMA                                   |   |\n",
-    "| natural T regulatory cells (nTreg)                | FOXP3, CTLA4                                 |   |"
+    "|       T cell type /   differentiation state       | Marker genes  mentioned in Cano-Gamez et al. |  \n",
+    "|:-------------------------------------------------:|:--------------------------------------------:|\n",
+    "| central memory T cells  (Tcm)                     | PASK                                         | \n",
+    "| effector memory T cells  (Tem)                    | IL7R, KLRB1, TNFSF13B                        |  \n",
+    "| terminally differentiated effector cells  (TEMRA) | CCL4, GZMA                                   |  \n",
+    "| natural T regulatory cells (nTreg)                | FOXP3, CTLA4                                 |  "
    ]
   },
   {
@@ -408,11 +436,11 @@
    "id": "c8bdf762",
    "metadata": {},
    "source": [
-    "| T cell type /  differentiation state  | Marker genes literature   |   |\n",
-    "|---------------------------------------|---------------------------|---|\n",
-    "| T naive (Tn)                          | CCR7                      |   |\n",
-    "| central memory T cells (Tcm)          | FAS, IL2RB, PRDM1         |   |\n",
-    "| effector memory T cells (Tem)         | CXCR3, ITGAL, CCR5, TBX21 |   |"
+    "| T cell type /  differentiation state  | Marker genes literature   |  \n",
+    "|---------------------------------------|---------------------------|\n",
+    "| T naive (Tn)                          | CCR7                      |  \n",
+    "| central memory T cells (Tcm)          | FAS, IL2RB, PRDM1         |   \n",
+    "| effector memory T cells (Tem)         | CXCR3, ITGAL, CCR5, TBX21 |   "
    ]
   },
   {
@@ -443,6 +471,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76a5f8a2",
+   "metadata": {},
+   "source": [
+    "-> markers clearly expressed in cluster 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d8981613",
    "metadata": {},
    "source": [
@@ -457,6 +493,14 @@
    "outputs": [],
    "source": [
     "sc.pl.umap(canogamez_uns, color = ['louvain_1.0', 'FOXP3', 'CTLA4'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5989c94",
+   "metadata": {},
+   "source": [
+    "-> marker genes expressed in cluster 6"
    ]
   },
   {
@@ -479,6 +523,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18ff3f67",
+   "metadata": {},
+   "source": [
+    "-> marker genes mostly expressed in cluster 0, 2 and 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "21797a88",
    "metadata": {},
    "source": [
@@ -493,6 +545,14 @@
    "outputs": [],
    "source": [
     "sc.pl.umap(canogamez_uns, color = ['louvain_1.0', 'FAS', 'IL2RB', 'PRDM1', 'PASK'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9578fca5",
+   "metadata": {},
+   "source": [
+    "-> Tcm marker expression present in cluster 3 and 1"
    ]
   },
   {
@@ -529,6 +589,14 @@
    "outputs": [],
    "source": [
     "sc.pl.umap(canogamez_uns, color = ['louvain_1.0', 'IL7R', 'KLRB1', 'TNFSF13B'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212dd11e",
+   "metadata": {},
+   "source": [
+    "-> Tem cells can be assinged to cluster 4"
    ]
   },
   {
@@ -602,6 +670,14 @@
    "source": [
     "sc.pl.umap(canogamez_uns, color = 'cell type', legend_loc = 'on data', title = 'Annotated UNS cells',\n",
     "           frameon = False, legend_fontsize = 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0696315",
+   "metadata": {},
+   "source": [
+    "Similar annotation as by Cano-Gamez et al., see: <https://cytokines.cellgeni.sanger.ac.uk/resting>"
    ]
   },
   {
